--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "felipeoriani",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.133",
     "@types/node": "*",
     "typescript": "^5.3.3"
   }
