--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.133",
     "@types/node": "*",
+    "serverless-plugin-typescript": "^2.1.5",
     "typescript": "^5.3.3"
   }
 }
