--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "yarn build && node .build/src/index.js",
     "lint": "eslint --ext .ts .",
     "lint:fix": "eslint --fix --ext .ts .",
-    "test": "globstar -- node --import tsx --test \"tests/**/*.unit.test.ts\"",
+    "test": "glob -c \"node --import tsx --no-warnings --test\" \"tests/**/*.{spec,test}.ts\"",
     "type-check": "tsc --pretty --noEmit",
     "package": "serverless package",
     "deploy": "serverless deploy --verbose",
@@ -29,7 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint": "^8.56.0",
-    "globstar": "^1.0.0",
+    "glob": "^10.3.1",
     "serverless-deployment-bucket": "^1.6.0",
     "serverless-plugin-typescript": "^2.1.5",
     "tsx": "^4.7.0",
